--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="picker.js"></script>
     <script src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
     <script src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
+    <script src="aozoraParser.js"></script>
 </head>
 <body>
     <aside id="menu">
