--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
     <script src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
     <script src="aozoraParser.js"></script>
+    <script src="marker.js"></script>
 </head>
 <body>
     <aside id="menu">
@@ -62,6 +63,8 @@
             charsInput.value = saved;
         }
         updateViewerWidth();
+
+        document.getElementById('markButton').addEventListener('click', addMarker);
     </script>
 </body>
 </html>
